# Parser_Project

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  COVERAGE.md  DOCKERHUB.md  Makefile  PROJECT_DESCRIPTION.md  Project_descript.md  README.md  docker-compose.yml  main.py  news.json  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  dockerhub.yml
adapters/: __init__.py  http_client.py  repository.py
commands/: __init__.py  base_parser.py  dohod_parser.py  html_extractor.py  parser_service.py  rbc_parser.py  smartlab_parser.py
database/: init.sql
docs/: DATABASE_SCHEMA.md  ER_DIAGRAM.md
infra/: __init__.py  config.py  database.py
infra/docker/: api.dockerfile  web.dockerfile  worker.dockerfile
models/: __init__.py  base.py  dohod_dividend.py  log.py  rbc_news.py  smartlab_stock.py  source.py
parsers/: .coverage  __init__.py  base_parser.py  dohod.py  dohod_dividends.json  dohod_divs.json  rbc.py  smartlab.py  smartlab_stocks.json
parsers/tests/: base_parser_test.py  dohod_test.py  rbc_test.py  smartlab_test.py  test_coverage_all.py
src/: __init__.py
src/api/: __init__.py  main.py
src/core/: __init__.py  config.py
src/database/: __init__.py  database.py  init.sql  models.py
src/parsers/: __init__.py
src/tasks/: __init__.py  celery_app.py  db_utils.py  parser_tasks.py
src/utils/: __init__.py  api_client.py
src/web/: __init__.py  home.py  main.py
tests/parsers/: .coverage  __init__.py  base_parser_test.py  dohod_test.py  rbc_test.py  (+2 more)
web/: Dockerfile  _api.py  app.py  dashboard.py  requirements.txt  tasks.py
(+22 files in other folders)
